# Major-Project

./: .gitignore  AGENTS.md  design.md  dev.ps1  docker-compose.yml  start.ps1
.agents/skills/design-eng/: SKILL.md
.agents/skills/frontend-design/: SKILL.md
backend/: Dockerfile  config.py  db.py  logging_config.py  main.py  pyproject.toml  requirements.txt
backend/models/: chat.py  note.py
backend/routers/: auth.py  chat.py  faculty_notes.py  faculty_subjects.py  notes.py  providers.py
backend/services/: llm_service.py  notes_service.py  processor.py  rag_service.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChatMessage.tsx  FacultyGuard.tsx  FullscreenPrompt.tsx  LearningStyleEditor.tsx  NoteItem.tsx  ProviderSelector.tsx  SubjectCard.tsx  TriviaQuestion.tsx
frontend/src/constants/: subjects.ts
frontend/src/pages/: ChatView.tsx  Dashboard.tsx  FacultyDashboard.tsx  FacultyLogin.tsx  FacultySubjectNotes.tsx  Home.tsx  Settings.tsx  SubjectView.tsx  TriviaView.tsx
frontend/src/store/: auth.ts  settings.ts
frontend/src/types/: index.ts
